debug-storybook.log
[15:47:42.314] [INFO] storybook v10.3.4
[15:47:42.393] [ERROR] [38;2;241;97;97mSB_CORE-SERVER_0007 (MainFileEvaluationError): Storybook couldn't evaluate your [33m.storybook/main.js[39m file.

Original error:
[37m/.storybook/main.js:11
export default config;
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1762:18)
    at Module._compile (node:internal/modules/cjs/loader:1803:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1969:10)
    at Module.load (node:internal/modules/cjs/loader:1552:32)
    at Module._load (node:internal/modules/cjs/loader:1354:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:325:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:230:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:639:26)[39m[39m
    at loadMainConfig (file://./node_modules/storybook/dist/_node-chunks/chunk-3LP2BDDH.js:11712:11)
    at async buildDevStandalone (file://./node_modules/storybook/dist/core-server/index.js:7953:16)
    at async withTelemetry (file://./node_modules/storybook/dist/_node-chunks/chunk-HUYNFPPD.js:225:12)
    at async dev (file://./node_modules/storybook/dist/bin/core.js:2736:3)
    at async _Command.<anonymous> (file://./node_modules/storybook/dist/bin/core.js:2806:92)
[15:47:42.395] [WARN] Broken build, fix the error above.
You may need to refresh the browser.
[15:47:42.397] [WARN]   Failed to load preset: "/Users/vanessa/Desktop/Repo/design-system-portfoliovmp/.storybook/main.js"
[15:47:42.397] [ERROR] ./.storybook/main.js:11
export default config;
^^^^^^

[38;2;241;97;97mSyntaxError: Unexpected token 'export'[39m
    at wrapSafe (node:internal/modules/cjs/loader:1762:18)
    at Module._compile (node:internal/modules/cjs/loader:1803:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1969:10)
    at Module.load (node:internal/modules/cjs/loader:1552:32)
    at Module._load (node:internal/modules/cjs/loader:1354:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:325:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:230:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:639:26)